objects/redwing__Learning_Feed__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Feeds</relationshipLabel>
        <relationshipName>Learning_Feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Network_Id__c</fullName>
        <label>Network Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Feeds</relationshipLabel>
        <relationshipName>Learning_Plan_Feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Trac Feeds</relationshipLabel>
        <relationshipName>Learning_Trac_Feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Feed</label>
    <nameField>
        <label>Learning Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>